--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -207,13 +207,13 @@ $dropdown-caret-color:           #000 !default;
 // Used for a bird's eye view of components dependent on the z-axis
 // Try to avoid customizing these :)
 
-$zindex-navbar:            1000 !default;
-$zindex-dropdown:          1000 !default;
-$zindex-popover:           1010 !default;
-$zindex-tooltip:           1030 !default;
-$zindex-navbar-fixed:      1030 !default;
-$zindex-modal-background:  1040 !default;
-$zindex-modal:             1050 !default;
+$zindex-navbar:            50 !default;
+$zindex-dropdown:          50 !default;
+$zindex-popover:           51 !default;
+$zindex-tooltip:           53 !default;
+$zindex-navbar-fixed:      53 !default;
+$zindex-modal-background:  54 !default;
+$zindex-modal:             55 !default;
 
 // Media queries breakpoints
 // --------------------------------------------------
